# cpp-workshop

./: README.md
03_work_demos/robot/senor_sim/: CMakeLists.txt  main.cpp
03_work_demos/robot/senor_sim/core/: Frame.h  Fusion.h  FusionObject.h  Kalman.h  Monitor.h  Preprocess.h  SensorBundle.h  Sync.h  Tracker.h  Transform.h  WorldModel.h
03_work_demos/robot/senor_sim/sensor/: CameraSensor.h  LidarSensor.h  Sensor.h
03_work_demos/robot/senor_sim/utils/: Logger.h  Time.h
05_robot/AimRT_demo/executor/: CMakeLists.txt  build.sh  test.sh
05_robot/AimRT_demo/executor/cmake/: GetAimRT.cmake
05_robot/AimRT_demo/executor/src/: CMakeLists.txt
05_robot/AimRT_demo/executor/src/module/executor_co_loop_module/: executor_co_loop_module.cc  executor_co_loop_module.h
05_robot/AimRT_demo/executor/src/module/executor_co_module/: executor_co_module.cc  executor_co_module.h
05_robot/AimRT_demo/executor/src/module/executor_module/: executor_module.cc  executor_module.h
05_robot/AimRT_demo/executor/src/module/real_time_module/: CMakeLists.txt  real_time_module.cc  real_time_module.h
05_robot/AimRT_demo/executor/src/pkg/executor_pkg/: CMakeLists.txt  pkg_main.cc
05_robot/AimRT_demo/helloworld/src/: CMakeLists.txt
05_robot/AimRT_demo/helloworld/src/module/HelloWorld_module/: CMakeLists.txt  HelloWorld_module.cc  HelloWorld_module.h
05_robot/AimRT_demo/helloworld/src/pkg/HelloWorld_pkg/: CMakeLists.txt  pkg_main.cc
05_robot/robot_runtime/robot_runtime/: .gitignore  CMakeLists.txt  README.md  build.sh  local_setup.bash  start_runtime.sh
05_robot/robot_runtime/robot_runtime/config/: cli.yaml  modes.yaml  monitor.yaml  network.yaml  runtime.yaml
05_robot/robot_runtime/robot_runtime/src/: CMakeLists.txt
05_robot/robot_runtime/robot_runtime/src/adapter/ros2/: ros2_heartbeat_source.cpp  ros2_heartbeat_source.h
05_robot/robot_runtime/robot_runtime/src/capability/interface/: i_capability.h
05_robot/robot_runtime/robot_runtime/src/common/: config_loader.h  log.h
05_robot/robot_runtime/robot_runtime/src/core/: runtime.cpp  runtime.h
05_robot/robot_runtime/robot_runtime/src/gateway/cli/: cmd_mode.h  cmd_monitor.h  cmd_service.h  main.cpp
05_robot/robot_runtime/robot_runtime/src/gateway/tcp/: auth_manager.h  command_dispatcher.h  protocol_parser.h  tcp_server.cpp  tcp_server.h
05_robot/robot_runtime/robot_runtime/src/orchestration/mode/: mode_manager.cpp
05_robot/robot_runtime/robot_runtime/src/runtime/monitor/: monitor_manager.cpp  monitor_manager.h
05_robot/robot_runtime/robot_runtime/src/runtime/service_access/: service_access_manager.cpp  service_access_manager.h  service_client.h  service_handle.h  service_proxy.h  service_registry.h
05_robot/robot_runtime/robot_runtime/src/tests/: CMakeLists.txt
05_robot/robot_runtime/robot_runtime/tools/: env_setup.sh  log_clean.sh
05_robot/robot_runtime/ros2_ws/src/module_manager_hub/: AI修改描述.md  CMakeLists.txt  start.sh  stop.sh
05_robot/robot_runtime/ros2_ws/src/module_manager_hub/config/: modules.yaml
05_robot/robot_runtime/ros2_ws/src/module_manager_hub/launch/: manager.launch.py
05_robot/robot_runtime/ros2_ws/src/module_manager_hub/msg/: msg.txt
05_robot/robot_runtime/ros2_ws/src/module_manager_hub/plugin/: handshake_server.py
05_robot/robot_runtime/ros2_ws/src/module_manager_hub/src/: heartbeat_collector.cpp  main.cpp  module_manager_node.cpp  serial_joy_bridge.cpp  serial_reader.cpp  (+3 more)
05_robot/robot_runtime/runtime/: CMakeLists.txt
05_robot/robot_runtime/runtime/cli/: main.cpp
05_robot/robot_runtime/runtime/src/core/: service.cpp  service_manager.cpp
05_robot/robot_runtime/runtime/src/managers/: mode_manager.cpp  monitor_manager.cpp
05_robot/robot_runtime/src/: CMakeLists.txt  build.sh  setup.bash  start_runtime.sh
05_robot/robot_runtime/src/cli/: main.cpp
05_robot/robot_runtime/src/common/: config_loader.h  process_utils.h  type_def.h
05_robot/robot_runtime/src/config/: monitor.yaml  services.yaml
05_robot/robot_runtime/src/core/: runtime.cpp  runtime.h
05_robot/robot_runtime/src/manager/dependency_manager/: dependency_manager.cpp  dependency_manager.h
05_robot/robot_runtime/src/manager/mode_manager/: mode_manager.cpp  mode_manager.h
05_robot/robot_runtime/src/manager/monitor_manager/: monitor_manager.cpp  monitor_manager.h
05_robot/robot_runtime/src/manager/service_manager/: service_loader.h  service_manager.cpp  service_manager.h
05_robot/robot_runtime/src/modes/: debug.yaml  interaction.yaml  standby.yaml  teleop.yaml
05_robot/robot_runtime/src/network/: command_dispatcher.h  tcp_server.cpp  tcp_server.h
05_robot/robot_runtime/src/services/conversation/: service.yaml  start.sh  stop.sh
05_robot/robot_runtime/src/services/motion/: service.yaml
05_robot/robot_runtime/src/services/remote_control/: service.yaml
05_robot/robot_runtime/src/tools/: service_check.sh
05_robot/ros2-demos/fusion_ws/src/sensor_fusion_demo/: CMakeLists.txt  package.xml
05_robot/ros2_ws/src/module_manager_hub/: CMakeLists.txt  output.txt  package.xml
05_robot/ros2_ws/src/module_manager_hub/config/: modules.yaml  serial_joy_bridge.yaml
05_robot/ros2_ws/src/module_manager_hub/launch/: manager.launch.py
05_robot/ros2_ws/src/module_manager_hub/msg/: ModuleStatus.msg  Robotarmcontrol.msg  Robotarmstatus.msg
05_robot/ros2_ws/src/module_manager_hub/src/: module_manager.cpp  serial_joy_bridge.cpp  test_arm_controller_node.cpp  usb_camera_sender_node.cpp
05_robot/ros2_ws/src/module_manager_hub/srv/: ModuleControl.srv
05_robot/ros2_ws/src/module_manager_hub/test/: test_module_manager.cpp
05_robot/uav_comm_runtime/: CMakeLists.txt
05_robot/uav_comm_runtime/core/: LockFreeQueue.h  Message.h  Reactor.h  TopicGraph.h
05_robot/uav_comm_runtime/examples/: pub.cpp  sub.cpp  test_domain_isolation.cpp  test_match_ok.cpp  test_qos_mismatch.cpp  test_thread_safe.cpp
05_robot/uav_comm_runtime/message/: pose.proto
05_robot/uav_comm_runtime/runtime/: Publisher.cpp  Publisher.h  Subscription.cpp
05_robot/uav_comm_runtime/zenoh/zenoh-c/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+166 files in other folders)
